# podman-fullstack-devcontainer-kit

./: .gitignore  LICENSE  README.md  compose.base.yaml  nginx.conf  project_context.md  setup_deps.ps1  start-dev.ps1  start-dev.sh  start_dev.ps1  stop_dev.ps1  verify_auth.sh
.devcontainer/: Dockerfile  check-versions.sh  compose.yaml  devcontainer.json
docs/rest-api/v1/: openapi.yaml
go_workspace/: go.mod  main.go
infrastructure/: compose.app.authentik.yaml  compose.data.mysql.yaml  compose.data.postgres.yaml  compose.data.redis.yaml  compose.tools.yaml
infrastructure/nginx/: nginx.conf
initdb/: .keep  00_authentik.sql  01_initial_schema.sql
php_workspace/: composer.json  index.php
rust_workspace/: Cargo.toml
rust_workspace/src/: main.rs
services/go/: Dockerfile  compose.yaml  devcontainer.json
services/node-nextjs/: compose.yaml  devcontainer.json
services/php-laravel/: Dockerfile  compose.yaml  devcontainer.json
services/python/: Dockerfile  compose.yaml  devcontainer.json
services/rust/: Dockerfile  compose.yaml  devcontainer.json
