[package]
name = "rust-auth-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
reqwest = { version = "0.11", features = ["json", "blocking"] }
env_logger = "0.10"
log = "0.4"
futures = "0.3"
